<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/defaultLayout"
    tools:context="me.mountainviewer.asura.AsuraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blackborder">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/store"
            android:textColor="#000000"
            android:onClick="storeClick"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/myApps"
            android:textColor="#000000"
            android:onClick="myAppsClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:id="@+id/searchLayout">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:textColor="#000000"
        android:hint="@string/searchApps"
        android:textColorHint="#000000"
        android:backgroundTint="#000000"
        android:id="@+id/searchApp" />

    <ImageView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/ic_search_black_24dp"
        android:onClick="searchApps"/>
    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:padding="11dp"
        android:id="@+id/installAppTextView"
        android:text="@string/installApp"
        android:textColor="#000000"
        android:textSize="22sp"
        android:onClick="installApp" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView" />

    <WebView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/webViewCore"/>
</LinearLayout>

    <!--Copyright 2017 Yuri Faria

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.-->